--- a/usuario_ws/src/main/resources/application.properties
+++ b/usuario_ws/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/lavanderia
+spring.datasource.username=lavanderia_user
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=none  
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.show_sql=true
