--- a/usuario_ws/src/main/resources/application.properties
+++ b/usuario_ws/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none  
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.show_sql=true
+server.port=8080
